@@ -1,3 +1,7 @@
+2005-10-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* gfortran.dg/gomp/appendix-a/a.31.3.f90: New test.
+
 2005-10-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/gomp/appendix-a/a.24.1.f90: Add dg-error lines.
