@@ -1,5 +1,10 @@
 2005-10-18  Jakub Jelinek  <jakub@redhat.com>
 
+	* testsuite/libgomp.fortran/appendix-a/a.31.3.f90: Removed.
+	* testsuite/libgomp.fortran/reduction5.f90: New test.
+
+2005-10-18  Jakub Jelinek  <jakub@redhat.com>
+
 	* testsuite/libgomp.fortran/appendix-a/a.40.1.f90: Add -ffixed-form to
 	dg-options.
 	* testsuite/libgomp.fortran/appendix-a/a.18.1.f90: Likewise.  Enable
